# Film-Catalog

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
Film Catalog/: AdminMenu.cpp  CMakeLists.txt  CatalogDisplayItem.cpp  CatalogItemAdder.cpp  DisplayCatalog.cpp  DynamicResourceCreator.cpp  FilmCatalog.cpp  UserCard.cpp  UserProvider.cpp  dbprovider.cpp  main.cpp
Film Catalog/include/: Authorization.h  CatalogItemAdder.h  DisplayCatalog.h  DynamicResourceCreator.h  FilmCatalog.h  UserCard.h  UserProvider.h  UserSelfEdit.h  dbprovider.h
Film Catalog/resources/: catalog.qrc  scheme.sql
Film Catalog/ui/: AdminMenu.ui  Authorization.ui  CatalogDisplayItem.ui  DisplayCatalog.ui  FilmCatalog.ui
FilmCatalog/: Authorization.cpp  CMakeLists.txt  DisplayCatalog.cpp  FilmCatalog.cpp  UserProvider.cpp  UserSelfEdit.cpp  main.cpp
FilmCatalog/include/: AdminMenu.h  CatalogDisplayItem.h  FilmCatalog.h
FilmCatalog/resources/: catalog.qrc
FilmCatalog/translation/: Catalog_ru.ts
FilmCatalog/ui/: CatalogItemAdder.ui  DisplayCatalog.ui  UserCard.ui  UserSelfEdit.ui
